--- a/options/options.html
+++ b/options/options.html
@@ -1,8 +1,24 @@
-(async function () {
-  const [tab] = await chrome.tabs.query({ active: true, currentWindow: true });
-  chrome.tabs.executeScript?.(); // noop for MV3; kept for compatibility
-  // We’ll just show a lightweight status via content decision memory
-  const statusEl = document.getElementById('status');
-
-  statusEl.textContent = 'Open the sidebar on the page. The extension scans automatically.';
-})();
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8"/>
+  <title>LLM Prompt Guard • Options</title>
+  <link rel="stylesheet" href="options.css"/>
+</head>
+<body>
+  <main>
+    <h1>LLM Prompt Guard — Options</h1>
+    <label>
+      Classifier Endpoint (HTTPS):
+      <input id="endpoint" type="url" placeholder="https://proxy.example.com/classify"/>
+    </label>
+    <label>
+      API Key (stored locally):
+      <input id="apiKey" type="password" placeholder="sk-..."/>
+    </label>
+    <button id="save">Save</button>
+    <div id="msg"></div>
+  </main>
+  <script src="options.js"></script>
+</body>
+</html>
