--- a/popup/popup.html
+++ b/popup/popup.html
@@ -19,9 +19,21 @@
 
       <section class="status-card" aria-live="polite">
         <div class="status-card__indicator" role="presentation"></div>
-        <div>
+        <div class="status-card__body">
           <p class="status-card__label">Status</p>
           <p id="status" class="status-card__message">Loading…</p>
+          <div class="status-card__progress">
+            <div
+              class="progress"
+              role="progressbar"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              aria-valuenow="0"
+            >
+              <div class="progress__bar"></div>
+            </div>
+            <p id="progress-text" class="progress__label">Waiting for scan…</p>
+          </div>
         </div>
       </section>
 
